# notes-api

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml
api/: auth.py  note.py  organization.py  user.py
core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
models/: note.py  organization.py  user.py
schemas/: requests.py  responses.py
services/: auth.py  note.py  organization.py  user.py
tests/: conftest.py  test_auth.py  test_note.py  test_organization.py  test_user.py
